Méthode permutations de la classe Lists.java terminée et testée (je joins les tests). On peut effectuer d'autres tests (Est-ce que l'ordre compte ??) et Javadoc à faire