@@ -39,66 +39,53 @@ public final class Lists {
         }
     }
     
-    public static <T> List<List<T>> permutations(List<T> l){
-        List<List<T>> l1 = new ArrayList<List<T>>();
-        if (l.size()<2) {
-            l1.add(l);
-            return l1;
-        }
-        if (l.size()==2){
-            l1.add(l);
-            List<T> l2 = new ArrayList<>();
-            l2.add(l.get(1));
-            l2.add(l.get(0));
-            l1.add(l2);
-            return l1;
-        }
-        return permutationsBis(l);
-    }
+    /**
+     * Return a list of all possible combinations 
+     * @param l
+     * @return
+     */
     
-    public static <T> List<List<T>> permutationsBis(List<T> l){
-        ArrayDeque<T> copy = new ArrayDeque<T>(l);
+    public static <T> List<List<T>> permutations(List<T> l){
+        ArrayList<T> copy = new ArrayList<T>(l);
         ArrayDeque<T> el = new ArrayDeque<T>();
-        ArrayDeque<T> temp;
+        ArrayList<T> temp = new ArrayList<>();
         List<List<T>> list = new ArrayList<>();
+        if (l.size()<2) {
+            list.add(l);
+            return list;
+        }
         while (copy.size()>2){
-            el.addFirst(copy.getFirst());
-            copy.removeFirst();
-        }System.out.println(el+" el");
+            el.addFirst(copy.get(0));
+            copy.remove(0);
+        }
+        temp.addAll(copy); //size==2
+        list.add(new ArrayList<>(temp));
+        temp.clear();
+        Collections.reverse(copy);
+        temp.addAll(copy);
+        list.add(new ArrayList<>(temp));
         while (!el.isEmpty()){
-            for (int i=0;i<copy.size();++i){
-                temp = new ArrayDeque<>(copy);
-                for (int j=0;j<i;++j){
-                    temp.addFirst(temp.getLast());
-                    temp.removeLast();
-                }
-                temp.addFirst(el.getFirst());
-                list.add(new ArrayList<T>(temp));
-                for (int j=0;j<temp.size()-1;++j){
-                    temp.addFirst(temp.getLast());
-                    temp.removeLast();
-                    list.add(new ArrayList<T>(temp));
-                }
-            }
+            list=recursionLists(list,el.getFirst());
             el.removeFirst();
         }
         return list;
     }
     
-    public static <T> List<List<T>> recursionLists(List<List<T>> l,T el){
-        ArrayList<List<T>> copy = new ArrayList<>(l);
-        List<T> temp = new ArrayList<>();
+    private static <T> List<List<T>> recursionLists(List<List<T>> l,T el){
+        ArrayList<ArrayDeque<T>> copy = new ArrayList<>();
+        ArrayDeque<T> t;
+        for (int i=0;i<l.size();++i){
+            t=new ArrayDeque<>(l.get(i));
+            copy.add(t);
+        }
         ArrayList<List<T>> list = new ArrayList<>();
-        for (int i=0;i<copy.size();++i){
-            for (int j=0;(j<i)&&(j<copy.get(i).size());++j){
-                temp.add(copy.get(i).get(j));
+        for (int i=0;i<l.size();++i){
+            copy.get(i).addFirst(el);
+            for (int j=0;j<copy.get(i).size();++j){
+                list.add(new ArrayList<>(copy.get(i)));
+                copy.get(i).addFirst(copy.get(i).getLast());
+                copy.get(i).removeLast();
             }
-            temp.add(el);
-            for (int j=0;j+i<copy.get(i).size();++i){
-                temp.add(copy.get(i).get(i+j));
-            }
-            list.add(temp);
-            temp.clear();
         }
         return list;
         
